# Huffman-coding

./: CMakeLists.txt  README.md  huffman.cpp  huffman.h  main.cpp  some_text_file.txt
